--- a/basic/basic.ipynb
+++ b/basic/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0, 1, 5], [1, 1, 5]]"
+       "11"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,8 +32,19 @@
     "A = [[0,1,5],\n",
     "     [1,1,5]]\n",
     "\n",
-    "b = [0,1,2]"
+    "b = [0,1,2]\n",
+    "\n",
+    "0*1 + 1*1 + 5*2\n",
+    "\n",
+    "1*0 + 1*1 + 5*2\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -43,22 +54,199 @@
    "source": [
     "# 1. Matrix Vector Multiplication \n",
     "\n",
-    "def matrix_vector(A,b):\n",
+    "# Doing so in numpy\n",
+    "\n",
+    "\n",
+    "\n",
+    "def matrix_vector_mult(A,b):\n",
     "    \"\"\"\n",
     "    Function which takes two matrices as input \n",
     "    retu\n",
     "\n",
-    "    \"\"\"\n"
+    "    \"\"\"\n",
+    "    pass \n",
+    "\n",
+    "\n",
+    "# check solution with numpy \n",
+    "\n",
+    "\n",
+    "# iterate through rows of the matrix \n",
+    "result = []\n",
+    "\n",
+    "nrows = len(A[0])\n",
+    "ncols = len(A)\n",
+    "\n",
+    "results = {0:[],1:[]}\n",
+    "\n",
+    "# iterate through each row of the matrix \n",
+    "for row in range(len(A)):\n",
+    "            # iterate through each item in the vector \n",
+    "            for j in range(len(b)):\n",
+    "                # run multiplication and add to result list \n",
+    "                result = A[row][j] * b[j]\n",
+    "                results[row].append(result)\n",
+    "\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = [sum(results[0]),\n",
+    "     sum(results[1])]\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(results[0])\n",
+    "sum(results[1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def matrix_add_subtract(A,B):\n",
-    "    pass"
+    "results = {0:[],1:[]}\n",
+    "\n",
+    "for matrix_row in range(len(A)):\n",
+    "    # iterate each item in the row of the matix \n",
+    "    for vec in b:\n",
+    "        for matrix_a_int in A[matrix_row]:\n",
+    "            results[matrix_row].append(vec*matrix_a_int)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: [0, 0, 0, 0, 1, 5, 0, 2, 10], 1: [0, 0, 0, 1, 1, 5, 2, 2, 10]}"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# result matrix will have same number of rows as the first matrix \n",
+    "# and the same number of columns as the second \n",
+    "sum(results[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(results[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "A = np.array([[0,1,5],\n",
+    "     [1,1,5]])\n",
+    "\n",
+    "b = np.array([0,1,2])\n",
+    "\n",
+    "print(A.dot(b))\n",
+    "\n"
    ]
   },
   {
