generalised as function

--- a/basic/basic.ipynb
+++ b/basic/basic.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,20 +58,7 @@
     "\n",
     "\n",
     "\n",
-    "def matrix_vector_mult(A,b):\n",
-    "    \"\"\"\n",
-    "    Function which takes two matrices as input \n",
-    "    retu\n",
     "\n",
-    "    \"\"\"\n",
-    "    pass \n",
-    "\n",
-    "\n",
-    "# check solution with numpy \n",
-    "\n",
-    "\n",
-    "# iterate through rows of the matrix \n",
-    "result = []\n",
     "\n",
     "nrows = len(A[0])\n",
     "ncols = len(A)\n",
@@ -92,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -134,17 +121,119 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the results dictionairy\n",
+    "\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n"
+      "[137  95 103]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "def matrix_vector_mult(A,b):\n",
+    "    # Check matrices can be multiplied\n",
+    "    if len(A[0]) != len(b):\n",
+    "        raise ValueError(\n",
+    "            f\"Cannot multiply a {len(A[0])}x{len(A)} matrix \"\n",
+    "            f\"with a {len(b)}-dimensional vector. \"\n",
+    "            f\"Matrix columns must equal vector dimensions\"\n",
+    "        )\n",
+    "    else:\n",
+    "        results = {}\n",
+    "        for i in range(len(A)):\n",
+    "            results[i] = []\n",
+    "        \n",
+    "        # iterate through each row of the matrix \n",
+    "        for row in range(len(A)):\n",
+    "                    # iterate through each item in the vector \n",
+    "                    for j in range(len(b)):\n",
+    "                        # run multiplication and add to result list \n",
+    "                        result = A[row][j] * b[j]\n",
+    "                        results[row].append(result)\n",
+    "        \n",
+    "        final_out = []\n",
+    "        for k,v in results.items():\n",
+    "             x = sum(v)\n",
+    "             final_out.append(x)\n",
+    "        return np.array(final_out)\n",
+    "\n",
+    "A = [[0,1,5,12,9],\n",
+    "     [1,1,5,5,9],\n",
+    "     [1,3,5,6,9]]\n",
+    "\n",
+    "b = [0,1,2,6,6]\n",
+    "\n",
+    "output = matrix_vector_mult(A,b)\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([137,  95, 103])"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check \n",
+    "\n",
+    "A = np.array(A)\n",
+    "\n",
+    "b = np.array(b)\n",
+    "A.dot(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = {}\n",
+    "for i in range(len(A)):\n",
+    "    test[i]=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: [], 1: []}"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test\n"
+   ]
   },
   {
    "cell_type": "code",
