--- a/basic/basic.ipynb
+++ b/basic/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,54 +11,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 22\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(b)):\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;66;03m# run multiplication and add to result list \u001b[39;00m\n\u001b[1;32m     21\u001b[0m     result \u001b[38;5;241m=\u001b[39m A[row][j] \u001b[38;5;241m*\u001b[39m b[j]\n\u001b[0;32m---> 22\u001b[0m     \u001b[43mresults\u001b[49m\u001b[43m[\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mappend(result)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 2"
+     ]
     }
    ],
-   "source": [
-    "# Create two matrices \n",
-    "\n",
-    "\n",
-    "A = [[0,1,5],\n",
-    "     [1,1,5]]\n",
-    "\n",
-    "b = [0,1,2]\n",
-    "\n",
-    "0*1 + 1*1 + 5*2\n",
-    "\n",
-    "1*0 + 1*1 + 5*2\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 202,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# 1. Matrix Vector Multiplication \n",
     "\n",
     "# Doing so in numpy\n",
     "\n",
+    "A = [[0,1,5],\n",
+    "     [1,1,5],\n",
+    "     [1,3,5]]\n",
     "\n",
-    "\n",
-    "\n",
+    "b = [0,1,2]\n",
     "\n",
     "nrows = len(A[0])\n",
     "ncols = len(A)\n",
@@ -119,18 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create the results dictionairy\n",
-    "\n",
-    "# "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -196,166 +162,10 @@
     }
    ],
    "source": [
-    "# check \n",
-    "\n",
+    "# check with numpy\n",
     "A = np.array(A)\n",
-    "\n",
     "b = np.array(b)\n",
     "A.dot(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = {}\n",
-    "for i in range(len(A)):\n",
-    "    test[i]=[]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 197,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: [], 1: []}"
-      ]
-     },
-     "execution_count": 197,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = {0:[],1:[]}\n",
-    "\n",
-    "for matrix_row in range(len(A)):\n",
-    "    # iterate each item in the row of the matix \n",
-    "    for vec in b:\n",
-    "        for matrix_a_int in A[matrix_row]:\n",
-    "            results[matrix_row].append(vec*matrix_a_int)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: [0, 0, 0, 0, 1, 5, 0, 2, 10], 1: [0, 0, 0, 1, 1, 5, 2, 2, 10]}"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results[]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "# result matrix will have same number of rows as the first matrix \n",
-    "# and the same number of columns as the second \n",
-    "sum(results[0])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum(results[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[11 11]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "A = np.array([[0,1,5],\n",
-    "     [1,1,5]])\n",
-    "\n",
-    "b = np.array([0,1,2])\n",
-    "\n",
-    "print(A.dot(b))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def matrix_transpose(A,B):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def matrix_determinant(A,B):\n",
-    "    pass "
    ]
   }
  ],
