--- a/basic/basic.ipynb
+++ b/basic/basic.ipynb
@@ -167,6 +167,121 @@
     "b = np.array(b)\n",
     "A.dot(b)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Matrix Addition and subtraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 4, 7], [0, 4, 8], [0, 2, 9]]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [[0,1,3],[0,0,5],[0,1,4]]\n",
+    "B = [[0,3,4],[0,4,3],[0,1,5]]\n",
+    "\n",
+    "\n",
+    "# initialise an empty matrix of the same shape as the two input matrices\n",
+    "rows = len(A)\n",
+    "n_cols = len(A[0])\n",
+    "\n",
+    "results_matrix = []\n",
+    "for i in range(rows):\n",
+    "    row = [0]*n_cols \n",
+    "    results_matrix.append(row)\n",
+    "\n",
+    "\n",
+    "results_matrix = [[0]*n_cols for _ in range(rows)]\n",
+    "\n",
+    "\n",
+    "operation = 'add'\n",
+    "\n",
+    "\n",
+    "for idx,i in enumerate(A):\n",
+    "    for idx_r , _ in enumerate(i):\n",
+    "       if operation == 'add':\n",
+    "        results_matrix[idx][idx_r] =  A[idx][idx_r]+B[idx][idx_r]\n",
+    "       else:\n",
+    "        results_matrix[idx][idx_r] =  A[idx][idx_r]-B[idx][idx_r]\n",
+    "          \n",
+    "results_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[69], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m     zeored_row \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m*\u001b[39mcols \n\u001b[1;32m     12\u001b[0m     results_matrix\u001b[38;5;241m.\u001b[39mappend(zeored_row)\n\u001b[0;32m---> 14\u001b[0m \u001b[43mresults_matrix\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m12\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "rows = len(A)\n",
+    "cols = len(A[0])\n",
+    "\n",
+    "results_matrix = []\n",
+    "for i in range(rows):\n",
+    "    # make zero rows \n",
+    "    zeored_row = [0]*cols \n",
+    "    results_matrix.append(zeored_row)\n",
+    "\n",
+    "results_matrix[0][1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[0]*5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
