--- a/notebooks/basic.ipynb
+++ b/notebooks/basic.ipynb
@@ -272,6 +272,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrix Transposition"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
@@ -304,8 +311,6 @@
     "    for col_idx in range(len(A[0])):\n",
     "        results_matrix[col_idx][row_idx] = A[row_idx][col_idx]\n",
     "\n",
-    "\n",
-    "\n",
     "print(np.array(results_matrix))"
    ]
   },
@@ -334,28 +339,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Matrix Determinant Calculation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 0, 1], [1, 0, 3], [3, 5, 5], [5, 6, 6]]\n"
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n",
+      "8\n"
      ]
     }
    ],
    "source": [
-    "\n"
+    "# Lower-Upper (LU) Decompositin\n",
+    "\n",
+    "matrix = [[8,1,3],\n",
+    "\n",
+    "          [4,1,4],\n",
+    "\n",
+    "          [1,3,4]]\n",
+    "\n",
+    " \n",
+    "\n",
+    "matrix = [[8,1,3,6],\n",
+    "\n",
+    "          [4,1,4,7],\n",
+    "\n",
+    "          [1,3,4,8],\n",
+    "\n",
+    "          [1,4,6,7]]\n",
+    "\n",
+    " \n",
+    "\n",
+    " \n",
+    "\n",
+    "# upper triangle is always as so\n",
+    "\n",
+    "# for the number of cols, in a matrix\n",
+    "\n",
+    "# n , n+1 , n+2 , n_3, n\n",
+    "\n",
+    " \n",
+    "\n",
+    "ncols = len(matrix[0])\n",
+    "\n",
+    "nrows = len(matrix)\n",
+    "\n",
+    " \n",
+    "\n",
+    "def init_matrix(ncols,nrows):\n",
+    "\n",
+    "    \"\"\"Create a zeroed square matrix. n = number of rows and cols\"\"\"\n",
+    "\n",
+    "    zero_matrix = [] # initialise an empty upper matrix\n",
+    "\n",
+    "    for _ in range(ncols):\n",
+    "\n",
+    "        row = [0] * nrows  # Initialize a row with n_rows zeros\n",
+    "\n",
+    "        zero_matrix.append(row)\n",
+    "\n",
+    "    return zero_matrix\n",
+    "\n",
+    " \n",
+    "\n",
+    "upper_matrix = init_matrix(4,4)\n",
+    "\n",
+    " \n",
+    "\n",
+    "for i in range(ncols):\n",
+    "    print(i+1)\n",
+    "\n",
+    " \n",
+    "# Find the upper triangle of a matrix\n",
+    "\n",
+    " \n",
+    "\n",
+    "def lu_decomp(matrix):\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    " \n",
+    "\n",
+    "print(upper_matrix)\n",
+    "\n",
+    "print(matrix[0][0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
